# typst-ide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  README.md  tauri.conf.json
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/compiler/: compile.rs  mod.rs
crates/core/src/database/: bibliography_db.rs  history_db.rs  mod.rs  notes_db.rs
crates/core/src/fs/: files.rs
crates/typst-as-library/: Cargo.toml
crates/typst-as-library/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: index.html  input.css
